I reworked saving files up to 50MB sent in the messenger to the postgres database. Dicom images are always saved in orthanc.